--- a/src/app/ui/dynamic-form/dynamic-form.component.html
+++ b/src/app/ui/dynamic-form/dynamic-form.component.html
@@ -1,56 +1,86 @@
-<ng-container *ngIf="formGroup">
-  <form style="display: flex; flex-direction: column;" [formGroup]="formGroup" (ngSubmit)="onSubmitHandler($event)">
-    @if (formConfig) {
-      @for (field of formConfig.fields;track field) {
-        @switch (field["type"]) {
-          @case (InputTypesEnum.text) {
-            <mat-form-field>
-              <mat-label>
-                {{ field["title"] }}
-              </mat-label>
-              <input matInput [type]="field['type']"
-                     [formControlName]="field['name']"
-                     [matTooltip]="field['description']">
-              @if (formGroup.get(field["name"])?.invalid) {
-                <mat-error>
-                  {{ field["errorMessage"] }}
-                </mat-error>
+<app-form-container [width]="'25%'">
+  <ng-container>
+    @if (formGroup) {
+
+      <mat-card-title *ngIf="formConfig">
+        {{ formConfig.title }}
+      </mat-card-title>
+      <form style="display: flex; flex-direction: column;" [formGroup]="formGroup"
+            (ngSubmit)="onSubmitHandler($event)">
+        @if (formConfig) {
+          @for (field of formConfig.fields; track field.name) {
+            @switch (field.type) {
+              @case (InputTypesEnum.text) {
+                <mat-form-field>
+                  <mat-label>
+                    {{ field.title }}
+                  </mat-label>
+                  <input matInput [type]="field.type"
+                         [formControlName]="field.name"
+                         [matTooltip]="field.description">
+                  @if (formGroup.get(field.name)?.invalid) {
+                    <mat-error>
+                      {{ field.errorMessage }}
+                    </mat-error>
+                  }
+                </mat-form-field>
               }
-            </mat-form-field>
-          }
-          @case (InputTypesEnum.newPassword) {
-            <mat-form-field>
-              <mat-label>
-                {{ field["title"] }}
-              </mat-label>
-              <input matInput [type]="field['type']"
-                     [formControlName]="field['name']"
-                     [matTooltip]="field['description']">
-              @if (formGroup.get(field["name"])?.invalid) {
-                <mat-error>
-                  {{ field["errorMessage"] }}
-                </mat-error>
+              @case (InputTypesEnum.newPassword) {
+                <div style="display:flex; gap: 16px; align-items:center;"
+                     [style.height.px]="input._elementRef.nativeElement.getBoundingClientRect().height">
+                  <mat-form-field #input style="width: 100%;">
+                    <mat-label>
+                      {{ field.title }}
+                    </mat-label>
+                    <input matInput [type]="'password'"
+                           [formControlName]="field.name"
+                           [matTooltip]="field.description">
+                    @if (formGroup.get(field.name)?.invalid) {
+                      <mat-error>
+                        {{ field.errorMessage }}
+                      </mat-error>
+                    }
+                    @if (field.info) {
+                      <mat-icon matSuffix>
+                        visibility
+                      </mat-icon>
+                    }
+                  </mat-form-field>
+                  <mat-icon>
+                    info
+                  </mat-icon>
+                </div>
+                @if (field.showConfirmPassword) {
+                  <mat-form-field>
+                    <mat-label>
+                      {{ "Confirm " + field.title }}
+                    </mat-label>
+                    <input matInput [type]="'password'"
+                           [formControlName]="'confirm'+field.name"
+                           [matTooltip]="field.description">
+                    @if (formGroup.get('confirm' + field.name)?.invalid) {
+                      <mat-error>
+                        {{ field.errorMessage }}
+                      </mat-error>
+                    }
+                    @if (field.info) {
+                      <mat-icon matSuffix>
+                        visibility
+                      </mat-icon>
+                    }
+                  </mat-form-field>
+                }
               }
-            </mat-form-field>
-<!--            @if (field["showConfirmPassword"]) {-->
-<!--              <mat-form-field>-->
-<!--                <mat-label>-->
-<!--                  {{ field["title"] }}-->
-<!--                </mat-label>-->
-<!--                <input matInput [type]="field['type']"-->
-<!--                       [formControlName]="field['name']"-->
-<!--                       [matTooltip]="field['description']">-->
-<!--                @if (formGroup.get(field["name"])?.invalid) {-->
-<!--                  <mat-error>-->
-<!--                    {{ field["errorMessage"] }}-->
-<!--                  </mat-error>-->
-<!--                }-->
-<!--              </mat-form-field>-->
-<!--            }-->
+            }
+          } @empty {
           }
         }
-      } @empty {
-      }
+        <button mat-flat-button [disabled]="formGroup.invalid">
+          {{ formConfig?.submitLabel }}
+        </button>
+      </form>
+    } @else {
+
     }
-  </form>
-</ng-container>
+  </ng-container>
+</app-form-container>
