--- a/src/app/ui/dynamic-form/dynamic-form.component.html
+++ b/src/app/ui/dynamic-form/dynamic-form.component.html
@@ -1,11 +1,11 @@
 <app-form-container [width]="'25%'">
   <ng-container>
-    @if (formGroup) {
+    @defer (when formGroup) {
 
       <mat-card-title *ngIf="formConfig">
         {{ formConfig.title }}
       </mat-card-title>
-      <form style="display: flex; flex-direction: column;" [formGroup]="formGroup"
+      <form style="display: flex; flex-direction: column;" [formGroup]="formGroup!"
             (ngSubmit)="onSubmitHandler($event)">
         @if (formConfig) {
           @for (field of formConfig.fields; track field.name) {
@@ -18,7 +18,7 @@
                   <input matInput [type]="field.type"
                          [formControlName]="field.name"
                          [matTooltip]="field.description">
-                  @if (formGroup.get(field.name)?.invalid) {
+                  @if (formGroup!.get(field.name)?.invalid) {
                     <mat-error>
                       {{ field.errorMessage }}
                     </mat-error>
@@ -35,20 +35,20 @@
                     <input matInput [type]="'password'"
                            [formControlName]="field.name"
                            [matTooltip]="field.description">
-                    @if (formGroup.get(field.name)?.invalid) {
+                    @if (formGroup!.get(field.name)?.invalid) {
                       <mat-error>
                         {{ field.errorMessage }}
                       </mat-error>
                     }
+                    <mat-icon matSuffix>
+                      visibility
+                    </mat-icon>
                     @if (field.info) {
-                      <mat-icon matSuffix>
-                        visibility
+                      <mat-icon matSuffix [matTooltip]="field.info">
+                        info
                       </mat-icon>
                     }
                   </mat-form-field>
-                  <mat-icon>
-                    info
-                  </mat-icon>
                 </div>
                 @if (field.showConfirmPassword) {
                   <mat-form-field>
@@ -58,7 +58,7 @@
                     <input matInput [type]="'password'"
                            [formControlName]="'confirm'+field.name"
                            [matTooltip]="field.description">
-                    @if (formGroup.get('confirm' + field.name)?.invalid) {
+                    @if (formGroup!.get('confirm' + field.name)?.invalid) {
                       <mat-error>
                         {{ field.errorMessage }}
                       </mat-error>
@@ -75,12 +75,16 @@
           } @empty {
           }
         }
-        <button mat-flat-button [disabled]="formGroup.invalid">
+        <button mat-flat-button [disabled]="formGroup!.invalid">
           {{ formConfig?.submitLabel }}
         </button>
       </form>
-    } @else {
-
+    } @placeholder (minimum 3000ms) {
+      <div style="display:flex; flex-direction: column; gap: 8px;">
+        @for (item of Array(6); track item) {
+          <ngx-skeleton-loader [count]="1" [theme]="{height: '56px', width: '288px'}"/>
+        }
+      </div>
     }
   </ng-container>
 </app-form-container>
