--- a/src/app/presentation/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/presentation/shared/dynamic-form/dynamic-form.component.html
@@ -3,14 +3,14 @@
     @defer (when formGroup) {
 
       <mat-card-title *ngIf="formConfig">
-        {{ formConfig.title }}
+        {{ formConfig.form.title }}
       </mat-card-title>
       <form style="display: flex; flex-direction: column;" [formGroup]="formGroup!"
             (ngSubmit)="onSubmitHandler($event)">
         @if (formConfig) {
-          @for (field of formConfig.fields; track field.name) {
-            @switch (field.type) {
-              @case (InputTypesEnum.text) {
+          @for (field of formConfig.form.fields; track field.name) {
+            @switch (field["@type"]) {
+              @case (".input.TextField") {
                 <mat-form-field>
                   <mat-label>
                     {{ field.title }}
@@ -25,7 +25,7 @@
                   }
                 </mat-form-field>
               }
-              @case (InputTypesEnum.newPassword) {
+              @case (".input.NewPasswordField") {
                 <div style="display:flex; gap: 16px; align-items:center;"
                      [style.height.px]="input._elementRef.nativeElement.getBoundingClientRect().height">
                   <mat-form-field #input style="width: 100%;">
@@ -76,7 +76,7 @@
           }
         }
         <button mat-flat-button [disabled]="formGroup!.invalid">
-          {{ formConfig?.submitLabel }}
+          {{ formConfig!.form.submitLabel }}
         </button>
       </form>
     } @placeholder (minimum 3000ms) {
