added chaning theme functionality

--- a/src/app/presentation/features/sign-up-page/sign-up-page.component.html
+++ b/src/app/presentation/features/sign-up-page/sign-up-page.component.html
@@ -1,3 +1,3 @@
-<app-theme-mode [label]="'dark mode'"/>
+<app-theme-mode [label]="'dark mode'" (checked)="themeService.changeToDarkMode($event)"/>
 <app-dynamic-form [formConfig]="dynamicFormConfig()"/>
 
