--- a/src/app/presentation/shared/components/theme-mode/theme-mode.component.html
+++ b/src/app/presentation/shared/components/theme-mode/theme-mode.component.html
@@ -1,3 +1,4 @@
-<mat-slide-toggle (change)="onChangeHandler($event)">
+<mat-slide-toggle [formControl]="formControl"
+                  (change)="onChangeHandler($event)">
   {{ label() }}
 </mat-slide-toggle>
