--- a/src/app/presentation/features/sign-up-page/sign-up-page.component.html
+++ b/src/app/presentation/features/sign-up-page/sign-up-page.component.html
@@ -2,3 +2,11 @@
                 (checkedChange)="themeService.changeTheme($event)"/>
 <app-dynamic-form [formConfig]="dynamicFormConfig()"/>
 
+<div style="display:flex; gap: 24px;">
+  <span>
+v{{ buildInfo()?.version }}
+  </span>
+  <span>
+{{ buildInfo()?.date | date }}
+  </span>
+</div>
