--- a/src/app/presentation/features/sign-up-page/sign-up-page.component.html
+++ b/src/app/presentation/features/sign-up-page/sign-up-page.component.html
@@ -1,4 +1,6 @@
 <!--<app-theme-mode [label]="'dark mode'" [checked]="themeService.isDarkModeOn()"-->
 <!--                (checkedChange)="themeService.changeTheme($event)"/>-->
 <!--<app-dynamic-form [formConfig]="dynamicFormConfig()"/>-->
-<app-test-component/>
+<div>
+
+</div>
