--- a/src/app/presentation/features/sign-up-page/sign-up-page.component.scss
+++ b/src/app/presentation/features/sign-up-page/sign-up-page.component.scss
@@ -1,6 +1,7 @@
 :host {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
-  background-color: red;
 }
