--- a/src/assets/themes/_dark.scss
+++ b/src/assets/themes/_dark.scss
@@ -14,6 +14,6 @@ $theme: mat.define-theme((
   )
 ));
 
-.dark-theme {
-  @include mat.all-component-colors($theme);
-}
+//.dark-theme {
+//  @include mat.all-component-colors($theme);
+//}
