--- a/src/assets/themes/_light.scss
+++ b/src/assets/themes/_light.scss
@@ -14,6 +14,6 @@ $theme: mat.define-theme((
   )
 ));
 
-.light-theme {
-  @include mat.all-component-colors($theme);
-}
+//.light-theme {
+//  @include mat.all-component-colors($theme);
+//}
