--- a/src/app/presentation/features/sign-up-page/sign-up-page.component.scss
+++ b/src/app/presentation/features/sign-up-page/sign-up-page.component.scss
@@ -1,8 +1,7 @@
 :host {
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
-  background-color: limegreen;
 }
