added chat-list-item UI component

--- a/src/app/presentation/features/sign-up-page/sign-up-page.component.html
+++ b/src/app/presentation/features/sign-up-page/sign-up-page.component.html
@@ -1,3 +1,6 @@
 <!--<app-theme-mode [label]="'dark mode'" [checked]="themeService.isDarkModeOn()"-->
 <!--                (checkedChange)="themeService.changeTheme($event)"/>-->
 <!--<app-dynamic-form [formConfig]="dynamicFormConfig()"/>-->
+<div style="width: 320px;">
+  <app-chat-list-item [name]="'Ali Ahmadi'" [message]="'بسه دیگه دولوپرعلی ادامه ادامه ادامه'"/>
+</div>
