--- a/src/app/presentation/shared/components/chaapaar/profile/profile.component.html
+++ b/src/app/presentation/shared/components/chaapaar/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div [matBadge]="1"
      [matBadgeSize]="'small'"
-     [matBadgePosition]="'above before'"
+     [matBadgePosition]="badgePosition()"
      [style.width.rem]="width()"
      [style.height.rem]="height()"
      class="profile-icon">
